# puzzle-engine

./: Cargo.toml  README.md
assets/: config.ron
assets/models/: Soccer.glb
assets/rules/: test.ron
blend_sources/: Soccer.blend
editor/: Cargo.toml  README.md
editor/src/: app.rs  main.rs
editor/ui/: app.slint  dialog.slint  text-editor.slint
example-rules/: gomoku.ron  test.ron
game/: Cargo.toml  README.md  settings.ron
game/assets/: config.ron
game/assets/rules/: test.ron
game/rules/: test.ron
game/src/: config.rs  main.rs  piece.rs  settings.rs  tile.rs
game/src/assets/: mod.rs
game/src/assets/materials/: common.rs  mod.rs  piece.rs
game/src/assets/meshes/: mod.rs  piece.rs
game/src/expr_contexts/: game_over.rs  mod.rs  movement.rs  placement.rs  win_or_lose.rs
game/src/session/: mod.rs  piece_index.rs  player.rs  state.rs  tile_index.rs  turn.rs
game/src/states/: error.rs  game_setup.rs  loading.rs  menu.rs  mod.rs  playing.rs  startup.rs
game/src/states/playing/: board.rs  camera.rs  mod.rs  piece.rs  tile.rs  ui.rs
game/src/states/playing/phases/: game_over.rs  mod.rs  moving.rs  placing.rs  selecting.rs  turn_end.rs
game/src/states/playing/session/: mod.rs  piece_index.rs  player.rs  state.rs  tile_index.rs  turn.rs
rule-editor/: Cargo.toml
rule-editor/src/: app.rs
rule-editor/ui/: app.slint  launcher.slint  rule-editor.slint
rule-engine/: Cargo.toml
rule-engine/src/: board.rs  initial_layout.rs  lib.rs  piece.rs  player.rs  pos.rs  position.rs  rect.rs  utils.rs
rulery/: Cargo.toml  README.md
rulery/src/: board.rs  initial_layout.rs  lib.rs  player.rs  utils.rs
rules/: Cargo.toml  gomoku.ron  sudoku.ron  test.ron  xiangqi.ron
rules/src/: board.rs  count.rs  lib.rs  piece.rs  player.rs  utils.rs
src/: config.rs  in_game.rs  main.rs  main_menu.rs  piece.rs  position.rs  session.rs  tile.rs  utils.rs
src/assets/: mod.rs
src/checkerboard/: mod.rs  tile.rs
src/rules/: board.rs  count.rs  direction.rs  distance.rs  initial_layout.rs  mod.rs  piece.rs  player.rs  utils.rs
src/session/: mod.rs  piece_index.rs  pieces.rs  player.rs  (+5 more)
(+39 files in other folders)
