[package]
name = "crazy-puzzle"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A customizable rule-based puzzle game"

[dependencies]
bevy = "0.16"
bevy_egui = "0.35"
indexmap = { version = "2.10", features = ["serde"] }
ron = "0.10"
rule-engine = { path = "../rule-engine" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
