[package]
name = "rule-editor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rule editor for Crazy Puzzle"

[dependencies]
rfd = "0.15"
rule-engine = { path = "../rule-engine" }
slint = "1.12"

[build-dependencies]
slint-build = "1.12"

[package.metadata.bundle]
name = "Crazy Puzzle Rule Editor"
identifier = "io.github.paraworker.crazy_puzzle.rule_editor"
